<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>door_adapter_switchbot</name>
  <version>0.0.0</version>
  <description>RMF door adapter for manually opened doors with switchbot contact sensors attached.</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/sbgisen/door_adapter_switchbot</url>
  <url type="bugtracker">https://github.com/sbgisen/door_adapter_switchbot/issues</url>
  <exec_depend>rmf_door_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
